# api

./: README.md
fastApi/: README.md  main.py  note.md  pyproject.toml
fastApi/fastApi/: main.py  startService.sh
fastApi/fastApi/lxextract/: service_lxextract.py
fastApi/fastApi/lxextract/param/: items.py
fastApi/fastApi/lxextract/src/: lang_extract.py  lang_extract.pyZone.Identifier  reference_verification.py
